tests/parser/fail/v23_fail_let_initializer_required.ep
# COMPILE_FAIL: requires an initializer
type Box {
    value: i64
}

fun main(): void {
    let b: Box
}
